# icf

./: .gitignore  CMakeLists.txt  Developing subdata access.ipynb  LICENSE  README.md  __init__.py  env_shell.sh.in  render-variables.cmake.in  setup.py  setup.py.in  setup.py.in.in  version_config.h.in
ctests/: ICFFile.cc  test_icf.cc  test_main.cc
examples/: test_cpp_ext.py  write_and_read.py
icf/: __init__.py  frame.py  icffile.py  io.py  utils.py
icf/pyicf/: __init__.py  icffile.py
include/icf/: archive.h  icfFile.h
pybind/: icfFile.cc  module.cc
pytest/: test_icffile.py
src/: icfFile.cc
test/: test_icffile.py
